# hyperlane-monorepo

./: .gitignore  .gitmodules  Dockerfile  README.md  dymension.md  masses.txt  tx.txt
.github/workflows/: codespell.yml  monorepo-docker.yml.disabled  release.yml.disabled  rust.yml  static-analysis.yml  storage-analysis.yml  test.yml
dymension/: VALIDATOR.md  dymension.md  dymension.readme.txt
dymension/dymension_test/: commands.sh  env.sh
dymension/dymension_test/chains/dymension/: addresses.yaml
dymension/dymension_test/configs/: .gitignore  agent-config.json  core-config.yaml  warp-route-deployment.yaml
dymension/dymension_test/node_project/: main.js
dymension/dymension_test2/: commands.sh
dymension/dymension_test2/chains/dymension/: metadata.yaml
dymension/dymension_test_backup/: env.sh
dymension/ethereum_test/: commands.sh
dymension/ethereum_test/chains/anvil1/: metadata.yaml
dymension/ethereum_test/configs/: warp-route-deployment.yaml
dymension/ethereum_test/hyperlane-local-test/configs/: warp-route-deployment.yaml
dymension/foo_test/: commands.sh
dymension/foo_test/configs/: warp-route-deployment.yaml
dymension/hub_test/: commands.sh  main.js  package.json
dymension/hub_test/chains/aaadymhub/: addresses.yaml  metadata.yaml
dymension/hub_test/chains/dymension/: addresses.yaml  metadata.yaml
dymension/hub_test/configs/: agent-config.json  core-config.yaml  readme.md  warp-route-deployment.yaml
dymension/hub_test/node_project/: main.js
dymension/libs/kaspa/: CONTRIBUTING.md  Cargo.toml  README.md
dymension/libs/kaspa/demo-multisig/: Cargo.toml  README.md  kaspad.toml
dymension/libs/kaspa/demo-multisig/src/: main.rs  multi.rs  other.txt
dymension/libs/kaspa/demo-multisig/src/x/: args.rs  consts.rs  deposit.rs  escrow.rs  example_multi.rs  mod.rs  util.rs  wallet.rs  withdraw.rs  withdraw_relayer.rs  withdraw_validator.rs
dymension/libs/kaspa/demo/multisig-working/: Cargo.toml
dymension/libs/kaspa/lib/bridge/: Cargo.toml
dymension/libs/kaspa/lib/bridge/src/: hub_client.rs  kaspa_bridge.rs  lib.rs
dymension/libs/kaspa/lib/storage/: Cargo.toml
dymension/libs/kaspa/lib/storage/src/: lib.rs  rocksdb_impl.rs  traits.rs
dymension/libs/kaspa/tooling/: Cargo.toml
dymension/solana_test/: commands.sh  readme.md
dymension/solana_test2/: readme.md
dymension/tests/ethereum_test/: commands.sh
dymension/tests/ethereum_test/configs/: agent-config.json
dymension/tests/kaspa_hub_test/: agent-config.json  bootstrap.json  commands.sh  commands_scratch.sh  env.sh
dymension/tests/kaspa_hub_test/hub_client/: go.mod  go.sum  main.go
dymension/tests/kaspa_hub_test_kas/: agent-config.json  bootstrap.json  commands.sh  env.sh
dymension/tests/solana_native_memo_test/: commands.sh
dymension/tests/solana_synth_memo_test/: commands.sh
dymension/validators/: README.md  README_bridge_other.md
dymension/validators/bridge/: README_bridge_kaspa.md  README_bridge_other.md
rust/: Dockerfile
rust/main/: Cargo.toml  announcement.json  dym_local.sh  metadata_latest.json
rust/main/ARBITRARY_VALUE_FOOBAR/: announcement.json  metadata_latest.json
rust/main/agents/relayer/: Cargo.toml
rust/main/agents/scraper/: Cargo.toml
rust/main/applications/dym-debug/: Cargo.toml
rust/main/applications/dym-debug/src/: main.rs
rust/main/chains/dymension-kaspa/: Cargo.toml
rust/main/chains/hyperlane-cosmos-native/: Cargo.toml
rust/main/config/: mainnet_config.json
rust/main/hyperlane-base/: Cargo.toml
rust/main/hyperlane-core/src/: chain.rs
rust/sealevel/: Cargo.toml
rust/sealevel/client/: Cargo.toml
rust/sealevel/client/src/: main.rs  warp_route.rs
rust/sealevel/programs/: build-programs.sh
rust/sealevel/programs/hyperlane-sealevel-token-collateral-memo/: Cargo.toml
scripts/: check-agent-versions.sh
solidity/: foundry.toml  package.json
solidity/contracts/token/: HypERC20Collateral.sol  HypNative.sol
solidity/contracts/token/extensions/: HypERC20CollateralMemo.sol  HypERC20Memo.sol  HypERC4626OwnerCollateral.sol  HypNativeMemo.sol
solidity/contracts/token/libs/: TokenRouterMemo.sol
solidity/test/token/: HypERC20.t.sol  HypERC20CollateralVaultDeposit.t.sol
typescript/cli/: debug-provider-error.mjs  debug-warp.js  debug-warp.mjs  package.json  test-warp-read.mjs
typescript/cli/src/: version.ts
typescript/cli/src/commands/: warp.ts
typescript/cli/src/config/: warp.ts
typescript/infra/: package.json
typescript/infra/scripts/safes/: create-safe.ts  get-pending-txs.ts  parse-txs.ts
typescript/infra/scripts/sealevel-helpers/: print-gas-oracles.ts
typescript/infra/src/agents/: gcp.ts
typescript/sdk/: package.json
typescript/sdk/src/: index.ts
typescript/utils/: package.json
(+299 files in other folders)
