[package]
name = "demo-multisig"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", version = "1.0.0" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", version = "1.0.0" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa", version = "1.0.0" }
secp256k1 = { version = "0.29", features = ["rand", "global-context", "serde"]}
serde_json = "1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
