[package]
name = "demo-multisig"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", version = "1.0.0" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", version = "1.0.0" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa", version = "1.0.0" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive", "rc"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde_repr = "0.1.18"
serde-value = "0.7.0"
