[package]
name = "demo-multisig"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
# kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa", rev = "eb71df4" }
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
serde_json = "1.0.107"
tokio = { version = "1.36", features = ["full"] }
