# message_inspector/Cargo.toml
[package]
name = "dym-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlane-sealevel = { path = "../../chains/hyperlane-sealevel" } # Adjust path if needed
hyperlane-core = { path = "../../hyperlane-core", features = ["solana"] } # Adjust path if needed
hyperlane-sealevel-mailbox = { path = "../../../sealevel/programs/mailbox", features = ["no-entrypoint"] } # Adjust path if needed

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }