[package]
name = "multisig-working"
version = "0.1.0"
edition = "2024"

[dependencies]
kaspa-consensus-core = { workspace = true }
kaspa-txscript = { workspace = true }
kaspa-wallet-pskt = { workspace = true }
kaspa-wrpc-client = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-bip32 = { workspace = true }
kaspa-wallet-core = { workspace = true }
kaspa-wallet-keys = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-core = { workspace = true }
kaspa-grpc-client = { workspace = true }
kaspa-notify = { workspace = true }
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
serde_json = "1.0.107"
tokio = { version = "1.36", features = ["full"] }
clap = "4.5.39"
log = "0.4.20"
faster-hex = "0.9.0"
bip39 = "2.1.0"
workflow-core = { version = "0.18.0" }
