[package]
name = "kaspa-bridge"
version = "0.2.0"
edition = "2021"

[dependencies]
kaspa-core = { path = "../core", package = "kaspa-core" }
kaspa-storage = { path = "../storage" }
async-trait = "0.1"
eyre = "0.6"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
