[package]
name = "kaspa-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
kaspa-core = { path = "../core" }
eyre = { workspace = true }
tracing = { workspace = true }
rocksdb = "0.21.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
